--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@ d
     <string name="towers_destroyed">Towers Destroyed:</string>
     <string name="inhibitors_destroyed">Inhibitors Destroyed:</string>
     <string name="barons_destroyed">Barons Destroyed:</string>
+    <string name="dragons_slain">Dragons Slain:</string>
 
 </resources>
