--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,7 @@ d
     <string name="inhibitors_destroyed">Inhibitors Destroyed:</string>
     <string name="barons_destroyed">Barons Destroyed:</string>
     <string name="dragons_slain">Dragons Slain:</string>
+    <string name="match_role">Role:</string>
+    <string name="match_team_red">Red Team:</string>
 
 </resources>
